# Zemi-rnd

./: .gitignore  README.md  Zemi7_David_Housler_Briefing_ZEM01.docx  Zemi7_David_Housler_Briefing_ZEM01_v2.docx  Zemi7_David_Housler_Briefing_ZEM01_v3.docx  Zemi7_UART_Log_Evidence_Summary.docx  Zemi7_UART_Log_Evidence_Summary_v2.docx  Zemi7_UART_Log_Evidence_Summary_v3.docx  Zemi_15th_July_Submission_CORRECTED.docx  Zemi_15th_July_Submission_FINAL.docx  Zemi_15th_July_Submission_FINAL_v2.docx  Zemi_RD_2026_Innercode_Submission_UPDATED_v2.docx  day1_commit.sh  day2_commit.sh  day3_commit.sh  test.md  zemi_git_commits.sh
docs/compliance/: AS_NZS_8124_Compliance_Report_Summary.md  BOM_v1_0.xlsx  IP67_NATA_Test_Report_Summary.md  README.md
firmware/core_activity_1_magnetic_sensor/: CMakeLists.txt  README.md
firmware/core_activity_1_magnetic_sensor/docs/: experiment_log.md  phase3_test_protocol.md
firmware/core_activity_1_magnetic_sensor/include/: mlx90393.h  noise_filter.h  pairing_state_machine.h
firmware/core_activity_1_magnetic_sensor/logs/: README.md
firmware/core_activity_1_magnetic_sensor/logs/phase3/: ca1_p3-consent-protocol_20260503.txt  ca1_p3-dynamic-play-01_20260511.txt  ca1_p3-dynamic-play-02_20260512.txt  ca1_p3-dynamic-play-03_20260513.txt  ca1_p3-dynamic-walk-01_20260508.txt  ca1_p3-dynamic-walk-02_20260509.txt  ca1_p3-dynamic-walk-03_20260510.txt  ca1_p3-hw-setup-01_20260501.txt  ca1_p3-hw-setup-02_20260502.txt  ca1_p3-static-1m-analysis_20260507.txt  ca1_p3-static-classroom-01_20260504.txt  ca1_p3-static-classroom-02_20260505.txt  ca1_p3-static-classroom-03_20260506.txt
firmware/core_activity_1_magnetic_sensor/main/: CMakeLists.txt
firmware/core_activity_1_magnetic_sensor/src/: mlx90393.c  noise_filter.c  noise_filter_v32.c  pairing_state_machine.c
firmware/core_activity_1_magnetic_sensor/tests/: test_sensor_firmware.c
firmware/core_activity_2_inductive_charging/docs/: experiment_log.md
firmware/core_activity_2_inductive_charging/logs/: README.md
firmware/core_activity_2_inductive_charging/logs/phase3/: ca2_p3a-env-setup_20260501.txt  ca2_p3a-ir-calib_20260502.txt  ca2_p3a-power-calib_20260503.txt  ca2_p3b-interaction-01_20260511.txt  (+9 more)
firmware/core_activity_2_inductive_charging/src/: ble_coexistence.c  ble_coexistence.h  flexible_ferrite.c  flexible_ferrite.h  thermal_manager.c  thermal_manager.h
firmware/nrf52_zemi_scaffold/: CMakeLists.txt
firmware/nrf52_zemi_scaffold/include/: mlx90393.h  mpu6050.h
firmware/nrf52_zemi_scaffold/src/: main.c  mlx90393.c  mpu6050.c
logs/ca1/phase3/: ca1-p3-dynamic-analysis.md  ca1-p3-phase3-summary.md  ca1-p3-scale-20dev-01.md  ca1-p3-scale-20dev-02.md  ca1-p3-scale-20dev-03.md  ca1-p3-scale-analysis.md  ca1-p3-stability-8hr-01.md  ca1-p3-stability-8hr-02.md  ca1-p3-stability-8hr-03.md
logs/ca1/phase4/: ca1-p4-ato-docs-01.md  ca1-p4-ato-docs-02.md  ca1-p4-ato-docs-03.md  ca1-p4-ato-docs-04.md  ca1-p4-ato-docs-05.md  ca1-p4-buffer-01.md  ca1-p4-buffer-02.md  ca1-p4-buffer-03.md  ca1-p4-buffer-04.md  ca1-p4-buffer-05.md  ca1-p4-buffer-06.md  ca1-p4-buffer-07.md  ca1-p4-buffer-08.md  ca1-p4-buffer-09.md  ca1-p4-buffer-10.md  ca1-p4-firmware-final-01.md  ca1-p4-firmware-final-02.md  ca1-p4-prep-bom-01.md  ca1-p4-prep-bom-02.md  ca1-p4-prep-compliance-01.md  ca1-p4-prep-compliance-02.md
logs/ca2/phase3/: ca2-p3b-bend-test-01.md  ca2-p3b-bend-test-02.md  ca2-p3b-bend-test-03.md  ca2-p3b-concurrent-01.md  ca2-p3b-concurrent-02.md  ca2-p3b-concurrent-03.md  ca2-p3b-fw-adj-01.md  ca2-p3b-phase3-summary.md  ca2-p3c-anomaly-01.md  ca2-p3c-anomaly-02.md
logs/ca2/phase4/: ca2-p4-ato-docs-01.md  ca2-p4-ato-docs-02.md  ca2-p4-ato-docs-03.md  ca2-p4-bom-final-01.md  ca2-p4-bom-final-02.md  ca2-p4-buffer-01.md  ca2-p4-buffer-02.md  ca2-p4-buffer-03.md  ca2-p4-buffer-04.md  ca2-p4-buffer-05.md  ca2-p4-buffer-06.md  ca2-p4-compliance-final-01.md  ca2-p4-compliance-final-02.md  ca2-p4-firmware-final-01.md  ca2-p4-ip67-lab-01.md  ca2-p4-ip67-lab-02.md  ca2-p4-prep-bom-01.md  ca2-p4-prep-compliance-01.md  ca2-p4-prep-ip67-01.md  ca2-p4-prep-ip67-02.md
week_automation/: batch_days14_21.sh  batch_days22_23.sh  batch_days24_25.sh  batch_days26_28.sh  batch_days31_33.sh  batch_days34_37.sh  batch_days39_43.sh  day10_commit.sh  day11_commit.sh  day12_commit.sh  day13_commit.sh  day29_commit.sh  day30_commit.sh  day38_commit.sh  day4_commit.sh  day5_commit.sh  day6_commit.sh  day7_commit.sh  day8_commit.sh  day9_commit.sh  run_today.sh
